unpackaged/main/default/objects/Checklist_Template_Standard__c/Checklist_Template_Standard__c.object-meta.xml
<CustomObject>
    <label>Checklist Template Standard</label>
    <nameField>
        <label>Standard Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Template Standards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>