unpackaged/main/default/objects/Checklist_Template_Standard__c/fields/Checklist_Template__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Template__c</fullName>
    <label>Checklist Template</label>
    <referenceTo>Checklist_Template__c</referenceTo>
    <relationshipName>Checklist_Standards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>