unpackaged/main/default/objects/Checklist_Template_Standard__c/fields/Checklist_Template_Section__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Template_Section__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Checklist Template Section</label>
    <referenceTo>Checklist_Template_Section__c</referenceTo>
    <relationshipName>Checklist_Standards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>