unpackaged/main/default/objects/Checklist_Template_Standard__c/fields/ContentVersion_URL__c.field-meta.xml
<CustomField>
    <fullName>ContentVersion_URL__c</fullName>
    <label>ContentVersion URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>