unpackaged/main/default/objects/Checklist_Template_Standard__c/fields/Default_Comments_Action__c.field-meta.xml
<CustomField>
    <fullName>Default_Comments_Action__c</fullName>
    <label>Default Comments/Action</label>
    <type>TextArea</type>
</CustomField>