unpackaged/main/default/objects/Checklist_Template_Standard__c/fields/Default_Compliant_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Compliant_Value__c</fullName>
    <label>Default Compliant Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliant_Value_set</valueSetName>
    </valueSet>
</CustomField>