unpackaged/main/default/objects/Checklist_Template_Standard__c/fields/Guidance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Notes__c</fullName>
    <label>Guidance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>