unpackaged/main/default/objects/Checklist_Template_Standard__c/fields/Previous_Standard__c.field-meta.xml
<CustomField>
    <fullName>Previous_Standard__c</fullName>
    <label>Previous Standard</label>
    <length>50</length>
    <type>Text</type>
</CustomField>